--- a/html my web.html
+++ b/html my web.html
@@ -170,7 +170,7 @@
         <a href="#contact">Contact</a>
     </nav>
     <section id="about" class="section">
-        <img id="profile-pic" src="C:\Users\hp 840 G5\Desktop\WhatsApp Image 2024-11-17 at 21.34.51_f57b739d.jpg" alt="Salman Khan">
+        <img id="profile-pic" src="C:\Users\hp 840 G5\Desktop\salam\SALMAN.jpg" alt="Salman Khan">
         <h2>About Me</h2>
         <p>Hi, I'm Salman Khan, a DevOps Engineer with a passion for building scalable, cloud-based solutions. I specialize in CI/CD automation, container orchestration, and cloud infrastructure management.</p>
     </section>
