--- a/index.html
+++ b/index.html
@@ -156,6 +156,22 @@
             background-color: #45a049;
         }
 
+        /* Contact Info */
+        .contact-info {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .contact-info p {
+            font-size: 1.2em;
+            color: #a0a0a0;
+        }
+
+        .contact-info a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+
     </style>
 </head>
 <body>
@@ -245,4 +261,12 @@
     <section id="contact" class="section">
         <h2>Contact Me</h2>
         <form class="contact-form" onsubmit="return sendMessage()">
-            <input type="text" id="name" placeholder="Your Name" required
+            <input type="text" id="name" placeholder="Your Name" required>
+            <input type="email" id="email" placeholder="Your Email" required>
+            <textarea id="message" placeholder="Your Message" rows="4" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+
+        <!-- Contact Information -->
+        <div class="contact-info">
+            <p>If you would like to contact me directly, feel free to </p>
